# Synthetix-CS

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.do/: app.yaml
alembic/: env.py
alembic/versions/: 7f2d3a7c2b11_add_learning_path_and_swot_foundation.py  a3b1c4d5e6f7_add_atomic_facts_to_cards.py  b4c2d5e6f8a9_remap_card_topic_keys_to_v3_graph.py  d1e2f3a4b5c6_add_clerk_user_id_and_document_chunks.py  e9ec022a3d0d_create_core_tables.py  g9b0c1d2e3f4_fix_document_chunks_created_at_default.py
data/: questions.jsonl
docs/: ARCHITECTURE.md  SETUP.md
docs/frontend-revamp/: system.md
eval/: __init__.py  build_chunks.py
eval/chunking/: metadata_extractor.py  structural_chunker.py
eval/dataset/: __init__.py  build_questions.py  seed_from_test_queries.py
eval/evaluate/: run_evaluation.py
frontend/: .env.example  .eslintrc.cjs  Dockerfile  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vercel.json  vite.config.ts
scripts/: backfill_topic_keys.py  build_chunks.py  build_topic_dependency_graph.py  check_db.py  check_learning_path_graph.py  seed_cards.py  sync_topic_dependency_graph.py
src/: __init__.py  config.py
tests/: __init__.py  test_api.py  test_auth.py  test_generation.py  test_grader.py  test_llm_review.py  test_orchestrator.py  test_path_planner.py  test_question_quality.py  test_quiz_api.py  test_quiz_service.py  test_retrieval.py  test_scheduler.py  test_session_service.py  test_swot.py  test_topic_graph_builder.py  test_variant_generator.py
(+140 files in other folders)
